syntax = "proto3";

option java_multiple_files = true;
package io.lightcone.relayer.external;

import "core.proto";


// RPC Submit Order
message RawOrder {
    int32       version                          = 1;
    string      owner                            = 2;
    string      token_s                          = 3;
    string      token_b                          = 4;
    string      amount_s                         = 5;
    string      amount_b                         = 6;
    string      valid_since                      = 7; // in seconds
    string      dual_auth_addr                   = 8;
    string      broker                           = 9;
    string      order_interceptor                = 10;
    string      wallet                           = 11;
    string      valid_until                      = 12; // in seconds
    string      sig                              = 13;
    string      dual_auth_sig                    = 14;
    bool        all_or_none                      = 15;
    string      dual_auth_private_key            = 16;
    string      token_fee                        = 17;
    string      amount_fee                       = 18;
    int32       token_s_fee_percentage           = 19;
    int32       token_b_fee_percentage           = 20;
    string      token_recipient                  = 21;
    int32       wallet_split_percentage          = 22;
    int32       token_standard_s                 = 23;
    int32       token_standard_b                 = 24;
    int32       token_standard_fee               = 25;
    string      tranche_s                        = 26;
    string      tranche_b                        = 27;
    string      transfer_data_s                  = 28;
}


message Trade {
    message Fee {
        // for market
        string token_fee               = 1;
        string  amount_fee              = 2;
        // for p2p
        string  fee_amount_s            = 3;
        string  fee_amount_b            = 4;

        string fee_recipient           = 5;
        int32  waive_fee_percentage    = 6; // miner waive
        int32  wallet_split_percentage = 7;
    }

    string owner             = 1;
    string order_hash        = 2;
    string ring_hash         = 3;
    int64  ring_index        = 4;
    int32  fill_index        = 5;
    string tx_hash           = 6;
    string amount_s          = 7;
    string amount_b          = 8;
    string token_s           = 9;
    string token_b           = 10;
    int64  market_id         = 11;
    string split             = 12; // tokenS
    Fee    fee               = 13;
    string wallet            = 14;
    string miner             = 15;
    int64  block_height      = 16;
    int64  block_timestamp   = 17;
}


message Ring {
    string   ring_hash         = 1;
    int64    ring_index        = 2;
    int32    fills_amount      = 3;
    string   miner             = 4;
    string   tx_hash           = 5;
    repeated Trade.Fee fees    = 6;
    int64    block_height      = 7;
    int64    block_timestamp   = 8;
}
